<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="weight_unit_imperial">Pounds</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="your_bmi_message">Your BMI is</string>
</resources>